--- a/index.css
+++ b/index.css
@@ -62,6 +62,8 @@ section {
   display: flex;
   align-items: center;
   font-size: 1rem;
+  margin-right: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .skill-item .dot {
@@ -137,8 +139,6 @@ section {
   display: block;
   margin: auto;
 }
-
-
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
